--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,13 @@ dependencies:
   equatable: ^2.0.5
   dotted_border: ^2.0.0+2
   intl: ^0.17.0
+  bloc_test: ^9.1.0
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   build_runner: ^2.0.0
   objectbox_generator: any
+  integration_test_preview: ^0.1.1
   flutter_test:
     sdk: flutter
 
