--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   intl: ^0.17.0
   bloc_test: ^9.1.0
   fl_chart: ^0.55.2
+  money_formatter: ^0.0.3
+  pie_chart: ^5.3.2
+
 
 dev_dependencies:
   build_runner: ^2.0.0
