--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,16 @@ dev_dependencies:
   build_runner: ^2.0.0
   objectbox_generator: any
   integration_test_preview: ^0.1.1
+  flutter_launcher_icons: "^0.10.0"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/logo_foreground.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
