--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   fl_chart: ^0.55.2
   money_formatter: ^0.0.3
   pie_chart: ^5.3.2
-
+  get: ^4.6.5
 
 dev_dependencies:
   build_runner: ^2.0.0
