--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   money_formatter: ^0.0.3
   pie_chart: ^5.3.2
   get: ^4.6.5
+  flutter_slidable: ^2.0.0
+  open_mail_app: ^0.4.5
 
 dev_dependencies:
   build_runner: ^2.0.0
