--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -56,6 +56,7 @@ dependencies:
   get: ^4.6.5
   flutter_slidable: ^2.0.0
   open_mail_app: ^0.4.5
+  package_info_plus: ^3.0.1
 
 dev_dependencies:
   build_runner: ^2.0.0
