--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.0.0+1
+version: 1.0.2+3
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=3.1.5 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,43 +35,39 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_screenutil: ^5.5.4
-  objectbox: ^1.6.2
+  cupertino_icons: 1.0.2
+  flutter_screenutil: 5.9.0
+  objectbox: 1.6.2
   objectbox_flutter_libs: any
-  uuid: ^3.0.6
-  curved_nav_bar: ^0.0.2
-  modal_bottom_sheet: ^2.1.2
-  emoji_picker_flutter: ^1.3.1
-  flutter_multi_formatter: ^2.7.5
-  get_it: ^7.2.0
-  flutter_bloc: ^8.1.1
-  equatable: ^2.0.5
-  dotted_border: ^2.0.0+2
-  intl: ^0.17.0
-  bloc_test: ^9.1.0
-  fl_chart: ^0.55.2
-  money_formatter: ^0.0.3
-  pie_chart: ^5.3.2
-  get: ^4.6.5
-  flutter_slidable: ^2.0.0
-  open_mail_app: ^0.4.5
-  package_info_plus: ^3.0.1
+  uuid: 3.0.6
+  curved_nav_bar: 0.0.2
+  emoji_picker_flutter: 1.3.1
+  flutter_multi_formatter: 2.7.5
+  get_it: 7.2.0
+  flutter_bloc: 8.1.1
+  equatable: 2.0.5
+  dotted_border: 2.0.0+2
+  intl: 0.17.0
+  fl_chart: 0.55.2
+  money_formatter: 0.0.3
+  pie_chart: 5.3.2
+  get: 4.6.5
 
 dev_dependencies:
-  build_runner: ^2.0.0
+  build_runner: 2.4.8
   objectbox_generator: any
-  integration_test_preview: ^0.1.1
-  flutter_launcher_icons: "^0.10.0"
+  flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo.png"
+  image_path: "assets/images/icon.jpg"
+  min_sdk_android: 21
   adaptive_icon_background: "#ffffff"
-  adaptive_icon_foreground: "assets/images/logo_foreground.png"
+  adaptive_icon_foreground: "assets/images/icon.jpg"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
