--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+3
+version: 1.0.3+4
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
@@ -37,9 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 1.0.2
   flutter_screenutil: 5.9.0
-  objectbox: 1.6.2
-  objectbox_flutter_libs: any
-  uuid: 3.0.6
+  hive:
+  uuid: 4.2.1
+  hive_flutter: 1.1.0
   curved_nav_bar: 0.0.2
   emoji_picker_flutter: 1.3.1
   flutter_multi_formatter: 2.7.5
@@ -52,11 +52,13 @@ dependencies:
   money_formatter: 0.0.3
   pie_chart: 5.3.2
   get: 4.6.5
+  flutter_email_sender: ^6.0.2
 
 dev_dependencies:
   build_runner: 2.4.8
-  objectbox_generator: any
-  flutter_launcher_icons: "^0.13.1"
+  hive_generator:
+
+  flutter_launcher_icons: 0.13.1
   flutter_test:
     sdk: flutter
 
